# gnutrackgenerator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci-cd-pipeline.yml.example
docs/: README.md
docs/architecture/: adr-0001-template.md
docs/community/: collaboration-guide.md
docs/legacy/: CHANGELOG-GNU-TrackGenerator-0.1.0.md  README-GNU-TrackGenerator-0.1.0.md  ROADMAP-GNU-TrackGenerator-0.1.0.md
docs/specifications/: project-specification.md
docs/user/: getting-started.md
src/gnu_trackgenerator/: __init__.py  __main__.py  chords.py  generator.py  gui.py  main.py  models.py  project_io.py
tests/: README.md
tests/unit/: test_chords.py  test_lilypond_output.py  test_timidity_config.py
